# dotfiles

./: .bash_profile  .bashrc  .gitconfig  .gitignore  .tmux.conf  CLAUDE.md  dotfiles.toml  main.py  pyproject.toml
fish/: config.fish  fish_colors  fishd.phoenix  fishfile
fish/functions/: fish_prompt.fish  set_color_custom.fish
kitty/: kitty.conf
nvim/: .netrwhist  init.vim
nvim/ftplugin/: R.vim  py.vim
nvim/tags/: vim
nvim/undo/: %home%william%.bashrc  %home%william%.config%fish%config.fish  %home%william%.config%nvim%ftplugin%R.vim  %home%william%.config%nvim%ftplugin%py.vim  %home%william%.config%nvim%init.vim  %home%william%.config%ranger%rc.conf  %home%william%.ctags  %home%william%.gitconfig  %home%william%.gnupg%gpg-agent.conf  %home%william%.irssi%config  %home%william%.tmux.conf  %home%william%Dropbox%Projects%Slack-Gitsin%slackClient%main.py  %home%william%Dropbox%Projects%anonsend%anonsend.py  %home%william%Dropbox%Projects%anonsend%output.txt  %home%william%Dropbox%Projects%black-arrow%bin%blackarrow.py  %home%william%Dropbox%Projects%black-arrow%install.sh  %home%william%Dropbox%Projects%black-arrow%rplugin%python3%blackarrow%__init__.py  %home%william%Dropbox%Projects%black-arrow%rplugin%python3%blackarrow%blackarrow.py  %home%william%Dropbox%Projects%enforce%README.md  %home%william%Dropbox%Projects%imagepreview%preview.py  %home%william%Dropbox%Projects%jupyter_toc%README.md  %home%william%Dropbox%Projects%jupyter_toc%generate_toc.py  %home%william%Dropbox%Projects%todo-tools%.git%COMMIT_EDITMSG  (+182 more)
tests/: test_main.py
