[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.11.0",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
index = [
    { name = "pypi", url = "https://pypi.org/simple", default = true },
    { name = "block-pypi", url = "https://pypi.block-artifacts.com/block-pypi/simple" },
]

[tool.pytest.ini_options]
pythonpath = ["."]
